added board mirroring

--- a/ttrmStats/index.html
+++ b/ttrmStats/index.html
@@ -11,6 +11,8 @@
 
 <h1> ttrm stats getter thing </h1>
 
+<p> <i>Warning:</i> a <i>MAJOR</i> update to TETR.IO has been released and it may render this project nonfunctional. Use at your own risk! </p>
+
 <h2> single ttrm </h2>
 <input type="file" id=file>
 <br>
