Add total mayhem support for seed checker

--- a/seedChecker/index.html
+++ b/seedChecker/index.html
@@ -16,6 +16,10 @@
     
     <div id="firstPieceMenu">
       <p> check first pieces: </p>
+      <select name="bagSystem" id="bagSystem">
+        <option value="7bag">7 bag</option>
+        <option value="tm">total mayhem</option>
+      </select>
       <input type="text" id="firstPieceInput" value="ZLOSIJT">
       <button id="firstPieceButton"> check </button>
       <button id="firstPieceOneButton"> find one </button>
