--- a/ttrmStats/index.html
+++ b/ttrmStats/index.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<link rel=stylesheet href=style.css> </link>
-<script src="https://cdn.jsdelivr.net/npm/jszip/dist/jszip.min.js"></script>
-<script src="ttrmStats.js"> </script>
-
-</head>
-<body>
-
-<h1> ttrm stats getter thing </h1>
-
-<p> <i>Warning:</i> a <i>MAJOR</i> update to TETR.IO has been released and it may render this project nonfunctional. Use at your own risk! </p>
-
-<h2> single ttrm </h2>
-<input type="file" id=file>
-<br>
-<button id=confirmation> get data </button>
-
-<h2> ttrm zip </h2>
-<input type="file" id=fileZip>
-<br>
-<button id=confirmationZip> get data </button>
-
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="main.js" type=module></script>
+  </head>
+  <body>
+    <h1> ttrm stats extractor thing </h1>
+    
+    <p> upload .ttrm </p>
+    <input type="file" id="fileInput" accept=".ttrm" multiple>
+    
+    <p> process .ttrm </p>
+    <button id="processButton"> process </button>
+  </body>
 </html>
