work on tetr.io /set generator
- added (beautiful) ui
- made command parsing

--- a/TETRIOset/index.html
+++ b/TETRIOset/index.html
@@ -2,10 +2,40 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js" type="module"></script>
   </head>
   <body>
     <div class="horizontal-container">
       <h1> TETR.IO <span class="mono">/set</span> GENERATOR </h1>
+    </div>
+    <div class="setting-container">
+      <div class="vertical-container">
+        <h2> Room </h2>
+        <hr>
+        <div id="settingRoomCategory"></div>
+      </div>
+      <div class="vertical-container">
+        <h2> Match </h2>
+        <hr>
+        <div id="settingMatchCategory"></div>
+      </div>
+    </div>
+    <div class="setting-container">
+      <div class="vertical-container">
+        <h2> Game </h2>
+        <hr>
+        <div id="settingGameCategory"></div>
+      </div>
+      <div class="vertical-container">
+        <h2> Movement </h2>
+        <hr>
+        <div id="settingMovementCategory"></div>
+      </div>
+      <div class="vertical-container">
+        <h2> Gravity & Margin Time </h2>
+        <hr>
+        <div id="settingGravityCategory"></div>
+      </div>
     </div>
   </body>
 </html>
