add total mayhem randomization option, tweaked colors to make light mode bearable

--- a/seedChecker2/index.html
+++ b/seedChecker2/index.html
@@ -26,6 +26,14 @@
         <label for="piece-sequence">Piece Sequence:</label>
         <input class="stretch-end" type="text" id="piece-sequence" placeholder="Enter piece sequence here">
       </div>
+      <br>
+      <div class="flex">
+        <label for="randomizer-type">Randomizer Type:</label>
+        <select id="randomizer-type">
+          <option value="7bag" selected>7-Bag</option>
+          <option value="totalMayhem">Total Mayhem</option>
+        </select>
+      </div>
       <hr>
       <div class="flex">
         <button id="start-button">Start</button>
