correct minor mistakes

--- a/seedChecker2/index.html
+++ b/seedChecker2/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <h1> Seed Checker V2 </h1>
       <p class="paragraph-content">
-        The successor to <i>Seed Checker V1</i>. This new program uses more advanced algorithms to quickly brute force game seeds. Rather than shuffling queues, it instead only operates on numbers and more efficiently compares it to caching lists. To further multiply the speed, multithreading is implemented to make use of all logical processors on the machine, allowing for faster and more efficient seed checking on a web application. For more information, check out the <a href="https://github.com/Spentine/Stacker-Tools/tree/main/seedChecker2/README.md">README</a>.
+        The successor to <i><a href="https://spentine.github.io/Stacker-Tools/seedChecker/">Seed Checker V1</a></i>. This new program uses more advanced algorithms to quickly brute force game seeds. Rather than shuffling queues, it instead only operates on numbers and more efficiently compares it to cached lists. To further multiply the speed, multithreading is implemented to make use of all logical processors on the machine, allowing for faster and more efficient seed checking on a web application. For more information, check out the <a href="https://github.com/Spentine/Stacker-Tools/tree/main/seedChecker2/README.md">README</a>.
       </p>
     </div>
     
