add option to change number of threads

--- a/seedChecker2/index.html
+++ b/seedChecker2/index.html
@@ -73,10 +73,12 @@
             <option value="all">Return All</option>
           </select>
         </div>
-        <div class="flex" id="maximum-seed-amount-container">
+        <div id="maximum-seed-amount-container">
           <br>
-          <label for="maximum-seed-amount"> Maximum Seed Amount: </label>
-          <input class="stretch-end" type="number" id="maximum-seed-amount" placeholder="Enter maximum seed amount" value="1000">
+          <div class="flex">
+            <label for="maximum-seed-amount"> Maximum Seed Amount: </label>
+            <input class="stretch-end" type="number" id="maximum-seed-amount" placeholder="Enter maximum seed amount" value="1000">
+          </div>
         </div>
         
         <br>
